force-app/main/default/objects/Lead/fields/AI_KeyTopics__c.field-meta.xml
<CustomField>
    <fullName>AI_KeyTopics__c</fullName>
    <label>AI_KeyTopics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>