force-app/main/default/objects/Lead/fields/AI_ReplyRecommendation__c.field-meta.xml
<CustomField>
    <fullName>AI_ReplyRecommendation__c</fullName>
    <label>AI_ReplyRecommendation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>