force-app/main/default/objects/Lead/fields/AI_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Score__c</fullName>
    <label>AI_Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>